k8s/ingress.minikube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-backend-ingress
  namespace: banking
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "2m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banking-backend-service
                port:
                  number: 80
